Apply grid display to 'Learn About' section

--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,9 @@ header .container li {
 header .container a {
     text-decoration: none;
 }
+
+/*Stylings for the Learn About section*/
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+}
