--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,9 @@ header .container a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
 }
+
+.card img {
+    height: 100px;
+    width: 100px;
+    /*switch to either auto or a fixed width later*/
+}
