--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ header .container a {
 .stories .container {
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
 .stories article {
