--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     font-size: 16px;
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+    font-size: 18px;
 }
 
 .container {
