--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
 header .container {
     display: flex;
     justify-content: space-between;
+    background-color: white;
+    font-size: 18px;
 }
 
 header .container ul {
@@ -25,6 +27,10 @@ header .container ul {
 
 header .container li {
     list-style: none;
+}
+
+header h1 {
+    font-size: 18px;
 }
 
 header .container a {
