--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,11 @@ header h1 {
 
 header .container a {
     text-decoration: none;
+    color: #6b7280;
+}
+
+header .container a:hover {
+    color: #5A67D8;
 }
 
 /*Stylings for the Learn About section*/
