--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ header .container a:hover {
     display: flex;
     justify-content: space-between;
     gap: 50px;
+    background-color: #E2E8F0;
 }
 
 .overview-hero-image {
