--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,12 @@ header .container a:hover {
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    gap: 10px;
+}
+
+.card {
+    border: solid 4px #E2E8F0;
+    border-radius: 5px;
 }
 
 .card img {
