--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ header .container a:hover {
 .card {
     border: solid 4px #E2E8F0;
     border-radius: 5px;
+    box-shadow: 0px 6px 5px rgb(215, 220, 230);
 }
 
 .card img {
