--- a/styles.css
+++ b/styles.css
@@ -79,12 +79,18 @@ header .container a:hover {
     border: solid 4px #E2E8F0;
     border-radius: 5px;
     box-shadow: 0px 6px 5px rgb(215, 220, 230);
+    padding: 10px;
 }
 
 .card img {
     height: 100px;
     width: 100px;
     /*switch to either auto or a fixed width later*/
+}
+
+.card-body h3 {
+    color: #48BB78;
+    font-size: 21px;
 }
 
 /*Stylings for the COVID-19 Testing Programme Section*/
