--- a/styles.css
+++ b/styles.css
@@ -96,9 +96,29 @@ header .container a:hover {
 /*Stylings for the COVID-19 Testing Programme Section*/
 .testing .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 250px;
+    gap: 100px;
+    background-color: #4A5568;
+    margin-top: 20px;
+    padding: 70px 0px;
+    color: white;
+}
+
+.testing .container .cta {
+    display: flex;
+    background-color: #48BB78;
+    border-radius: 5px;
+    padding: 10px 45px;
+    margin-right: 100px;
+}
+
+.cta a {
+    width: 100px;
+    height: 24px;
+    text-decoration: none;
+    color: white;
+    display: inline;
 }
 
 /*Stylings for Recent Stories Section*/
