--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,7 @@ body {
 
 .container {
     margin: 0 auto;
-    max-width: 960px;
-    width: 100%;
+    padding: 0px 250px;
 }
 
 /* Stylings for the header */
@@ -101,7 +100,8 @@ header .container a:hover {
     gap: 100px;
     background-color: #4A5568;
     margin-top: 20px;
-    padding: 70px 0px;
+    padding-top: 70px;
+    padding-bottom: 70px;
     color: white;
 }
 
@@ -159,11 +159,19 @@ header .container a:hover {
 }
 
 /*Stylings for Newsletter Section*/
+
 .newsletter .container {
     display: flex;
     flex-direction: column;
-    max-width: 500px;
     text-align: center;
+    background-color: #48BB78;
+    color: white;
+}
+
+.newsletter .container .btn {
+    background-color: #5A67D8;
+    border: 0px;
+    border-radius: 2px;
 }
 
 /* May not need this after styling the form elements, so they get bigger,
