--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header .container {
     justify-content: space-between;
     background-color: white;
     font-size: 18px;
+    align-items: center;
 }
 
 header .container ul {
@@ -26,6 +27,7 @@ header .container ul {
 
 header .container li {
     list-style: none;
+    margin: 0px 10px;
 }
 
 header h1 {
