--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,28 @@ header .container a:hover {
 
 .newsletter form {
     display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    gap: 10px;
+}
+
+.form-group {
+    display: flex;
+}
+
+#email {
+    border: 0px;
+    border-radius: 5px;
+    padding: 20px 0px;
+    padding-right: 80px;
+    padding-left: 20px;
+
+}
+
+.newsletter .container form .btn {
+    border-radius: 5px;
+    color: white;
+    padding: 10px 50px;
 }
 
 footer .container {
