--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,18 @@ body {
 
 .container {
     margin: 0 auto;
-    padding: 0px 250px;
+    max-width: 960px;
+    width: 100%;
 }
 
 /* Stylings for the header */
+header {
+    background-color: white;
+}
+
 header .container {
     display: flex;
     justify-content: space-between;
-    background-color: white;
     font-size: 18px;
     align-items: center;
 }
@@ -43,11 +47,15 @@ header .container a:hover {
 }
 
 /*Stylings for the Hero Section */
+.overview-hero {
+
+    background-color: #E2E8F0;
+}
+
 .overview-hero .container {
     display: flex;
     justify-content: space-between;
     gap: 50px;
-    background-color: #E2E8F0;
 }
 
 .overview-hero-image {
@@ -94,12 +102,16 @@ header .container a:hover {
 }
 
 /*Stylings for the COVID-19 Testing Programme Section*/
+
+.testing {
+    background-color: #4A5568;
+}
+
 .testing .container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 100px;
-    background-color: #4A5568;
     margin-top: 20px;
     padding-top: 70px;
     padding-bottom: 70px;
@@ -161,12 +173,15 @@ header .container a:hover {
 
 /*Stylings for Newsletter Section*/
 
+.newsletter {
+    background-color: #48BB78;
+}
+
 .newsletter .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: #48BB78;
     color: white;
 }
 
@@ -213,9 +228,13 @@ header .container a:hover {
     font-size: 16px;
 }
 
+
+footer {
+    background-color: #4A5568;
+}
+
 footer .container {
     display: flex;
-    padding: 20px 250px;
-    background-color: #4A5568;
+    padding: 20px 0px;
     color: white;
 }
