--- a/styles.css
+++ b/styles.css
@@ -56,19 +56,20 @@ header .container a:hover {
 .overview-hero .container {
     display: flex;
     justify-content: space-between;
-    gap: 50px;
+    gap: 120px;
 }
 
 .overview-hero-image {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 200px;
+    max-width: 250px;
 }
 
 .overview-hero-image img {
-    width: 100px;
-    height: 100px;
+    padding-left: 70px;
+    width: 200px;
+    height: 200px;
 }
 
 /*Stylings for the Learn About section*/
