--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ header .container a:hover {
 /*Stylings for Recent Stories Section*/
 .stories {
     padding: 50px 0;
+    margin-bottom: 20px;
 }
 
 .stories .container {
