--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,7 @@ header .container a:hover {
 .newsletter {
     background-color: #48BB78;
     padding: 30px 0;
+    padding-bottom: 50px;
 }
 
 .newsletter .container {
@@ -221,7 +222,6 @@ header .container a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 50px;
     gap: 10px;
 }
 
@@ -246,6 +246,9 @@ header .container a:hover {
     font-size: 16px;
 }
 
+.message {
+    padding-top: 10px;
+}
 
 footer {
     background-color: #4A5568;
